# FilleETL

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-sampleset.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
etl/: .env.example  main.py
etl/amazon_reviews/: __init__.py
etl/amazon_reviews/data_sample/: sampleset.csv
etl/amazon_reviews/sample_data/: sampleset.csv
etl/configs/: __init__.py  settings.py  sources.py
etl/jolanda_tinge/: __init__.py
etl/jolanda_tinge/sample_data/: sample_data.csv
etl/utils/: __init__.py  etl.py  language_detection.py  sftp.py
etl/utils/source_skeleton/: __init__.py
kafka_connect/: create_connector.bash  sftp_source_connector.json  value_schema_backup.json
sftp/: Dockerfile
tests/: __init__.py  test_output_generation.py
tests/fixtures/expected_outputs/: amazon_reviews.csv  jolanda_tinge.csv
